# mi-analyze

./: pyproject.toml
src/: analyze.py  epochs.py  main.py  merge_data.py  svm.ipynb  topomap.ipynb  topomap.py  visualize.py  wavelet.ipynb  wavelet.ipynb.new
