[project]
name = "mi-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda12x>=13.4.1",
    "ipykernel>=6.29.5",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.3",
    "mne>=1.9.0",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "setuptools>=80.4.0",
]
